Expanding the model, doing the search function
still learning how to properly implement relational databases in C#

--- a/SeniorResourceServiceCenter/SeniorResourceServiceCenter.csproj
+++ b/SeniorResourceServiceCenter/SeniorResourceServiceCenter.csproj
@@ -114,6 +114,7 @@
     </Compile>
     <Compile Include="Design\DesignDataService.cs" />
     <Compile Include="Model\Seniors.cs" />
+    <Compile Include="Model\SpecialRequirement.cs" />
     <Compile Include="Navigation\INavigationService.cs" />
     <Compile Include="Navigation\NavigationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
